Change name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jpolus/test_package",
+    "name": "pigletmedia/test_package",
     "type": "moodle-block",
     "authors": [
         {
